# upstage-gangwon-fastapi-lecture

./: .env.example  main.py  pyproject.toml  start.sh
.github/workflows/: ci.yml  cicd.yml  deploy-container.yml  deploy-k8s.yml  deploy-version.yml
app/: deps.py  logging.py  tools.py
app/api/route/: chat_router.py  document_router.py  user_routers.py
app/models/schemas/: chat.py  document.py
app/repository/: user_repo.py
app/repository/client/: upstage_client.py
app/service/: chat_service.py  document_service.py  user_service.py
app/utils/: file_extractor.py
infra/deploy/: docker-compose.yml
infra/k8s/application/: 04-backend.yaml
infra/k8s/application-deep/: 01-backend-rollingupdate.yaml
tests/: test_agent.py  test_easy.py
